Adjusted path for starter.